--- a/tournaments/under25.html
+++ b/tournaments/under25.html
@@ -263,13 +263,13 @@
                         <div class="round-details">Grand Finale <br /></div>
                         <ul class="matchup championship">
                             <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/uvhpf0/hottest_celeb_under_25_grand_finale_madison_beer/" target="_blank">Sydney Sweeney<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top round-details"><a href="https://www.reddit.com/r/CelebBattles/comments/uvhpf0/hottest_celeb_under_25_grand_finale_madison_beer/" target="_blank">Madison Beer<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/uvhpf0/hottest_celeb_under_25_grand_finale_madison_beer/" target="_blank">Madison Beer<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <div class="semis-r current">
                         <div class="round-details">Semifinals 2 <br /></div>
                         <ul class="matchup championship">
-                            <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/uu4w9c/hottest_celeb_under_25_semifinal_2_madison_beer/" target="_blank">Madelyn Cline<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/uu4w9c/hottest_celeb_under_25_semifinal_2_madison_beer/" target="_blank">Madelyn Cline<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/uu4w9c/hottest_celeb_under_25_semifinal_2_madison_beer/" target="_blank">Madison Beer<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
