--- a/tournaments/under25.html
+++ b/tournaments/under25.html
@@ -67,6 +67,7 @@
                             <li><a href="https://celebbattles.github.io/tournaments/yogapants">Best Butt in Yoga Pants</a></li>
                             <li><a href="https://celebbattles.github.io/tournaments/teambattles">Team Battles</a></li>
                             <li><a href="https://celebbattles.github.io/tournaments/under25">Hottest Celeb Under 25</a></li>
+                            <li><a href="https://celebbattles.github.io/tournaments/halloffamenudity">Hall of Fame Nudity</a></li>
                         </ul>
                     </li>
                 </ul>
