--- a/tournaments/halloffamenudity.html
+++ b/tournaments/halloffamenudity.html
@@ -149,7 +149,7 @@
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="">Phoebe Cates<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="">Denise Richards<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href=""><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="">Marie Baumer<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="">Gemma arterton<span class="score">&nbsp;</span></a></li>
