--- a/tournaments/halloffamenudity.html
+++ b/tournaments/halloffamenudity.html
@@ -147,7 +147,7 @@
                             <li class="team team-top name-details"><a href="">Viva Bianca<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="">Phoebe Cates<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="">Jaime Pressly<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="">Denise Richards<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="">Marie Baumer<span class="score">&nbsp;</span></a></li>
                         </ul>
