--- a/tournaments/halloffamenudity.html
+++ b/tournaments/halloffamenudity.html
@@ -122,29 +122,51 @@
                         <p class="group-details">Group B</p>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vf50b9" target="_blank">Teresa Palmer<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vf50b9" target="_blank">Rachel Weisz<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vf50b9" target="_blank">Lucy Lawless<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vf50b9" target="_blank">Rachel Weisz<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vf50b9" target="_blank">Lucy Lawless<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vf4zrl" target="_blank">Charlize Theron<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vf4zrl" target="_blank">Charlize Theron<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vf4zrl" target="_blank">Alexandra Daddario<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vf4zrl" target="_blank">Miley Cyrus<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vf4zrl" target="_blank">Miley Cyrus<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vf508a" target="_blank">Jennifer Lawrence<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vf508a" target="_blank">Alicia Vikander<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vf508a" target="_blank">Natalie Krill<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vf508a" target="_blank">Alicia Vikander<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vf508a" target="_blank">Natalie Krill<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vf54ip" target="_blank">Phoebe Cates<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vf54ip" target="_blank">Phoebe Cates<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vf54ip" target="_blank">Nathalie Emmanuel<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vf54ip" target="_blank">Sharon Stone<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vf54ip" target="_blank">Sharon Stone<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <p class="group-details">Group C</p>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Kate Mara<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Penelope Cruz<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Viva Bianca<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vgm1zj" target="_blank">Kate Mara<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vgm1zj" target="_blank">Penelope Cruz<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vgm1zj" target="_blank">Viva Bianca<span class="score">&nbsp;</span></a></li>
+                        </ul>
+                        <ul class="matchup">
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vgm24b" target="_blank">Elizabeth Olsen<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vgm24b" target="_blank">Madonna<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vgm24b" target="_blank">Cortney Palm<span class="score">&nbsp;</span></a></li>
+                        </ul>
+                        <ul class="matchup">
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vgm173" target="_blank">Anna Paquin<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vgm173" target="_blank">Emilia Clarke<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vgm173" target="_blank">Valerie Kaprisky<span class="score">&nbsp;</span></a></li>
+                        </ul>
+                        <ul class="matchup">
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vgm1na" target="_blank">Eline Powell<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vgm1na" target="_blank">Shannon Elizabeth<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/vgm1na" target="_blank">Ulrike Frank<span class="score">&nbsp;</span></a></li>
+                        </ul>
+
+                        <p class="group-details">Group D</p>
+                        <ul class="matchup">
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Addison Timlin<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Halle Berry<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Alison Brie<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="javascript:void(0);">Jaime Pressly<span class="score">&nbsp;</span></a></li>
@@ -161,27 +183,6 @@
                             <li class="team team-top name-details"><a href="javascript:void(0);">Alice Eve<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="javascript:void(0);">Jessica Parker Kennedy<span class="score">&nbsp;</span></a></li>
                         </ul>
-                        <p class="group-details">Group D</p>
-                        <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Addison Timlin<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Halle Berry<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Alison Brie<span class="score">&nbsp;</span></a></li>
-                        </ul>
-                        <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Elizabeth Olsen<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Madonna<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Cortney Palm<span class="score">&nbsp;</span></a></li>
-                        </ul>
-                        <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Anna Paquin<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Emilia Clarke<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Valerie Kaprisky<span class="score">&nbsp;</span></a></li>
-                        </ul>
-                        <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Eline Powell<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Shannon Elizabeth<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Ulrike Frank<span class="score">&nbsp;</span></a></li>
-                        </ul>
                     </div>
                     <!-- END ROUND ONE -->
                     <div class="round round-two current">
@@ -195,12 +196,12 @@
                             <li class="team team-top name-details"><a href="javascript:void(0);">Amy Smart<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Teresa Palmer<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Alexandra Daddario<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Jennifer Lawrence<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Nathalie Emmanuel<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
